# librag

./: .gitignore  CMakeLists.txt
include/: aggregator.h  aggregator.t  aggregator_list.h  aggregator_list.t  aggregator_xml.h  aggregator_xml.t  rank_aggregation_visitor.h  rank_aggregation_visitor.t  types.h
include/aggregators/: rank_aggregator.h  rank_aggregator.t  rank_aggregator_borda.h  rank_aggregator_borda.t  rank_aggregator_kemeny.h  rank_aggregator_kemeny.t  rank_aggregator_mean.h  rank_aggregator_mean.t  rank_aggregator_median.h  rank_aggregator_median.t  rank_aggregator_min.h  rank_aggregator_min.t
include/libdataset/: ThirdPartyLibManager.h  libdataset.h
include/libdataset/exceptions/: LibDatasetException.h  LibDatasetXMLException.h  exceptions.h
include/libdataset/xml/: XMLAttr.h  XMLAttr.t  XMLDocument.h  XMLErrorMessage.h  XMLNode.h  XMLNode.t  XMLVisitor.h  xml.h
include/libdataset/xml/adapters/: adapters.h
include/libdataset/xml/adapters/libxml2/: AllocatorAdapter.h  CharAdapter.h  CharAdapter.t  RelaxNGAllocatorAdapter.h  RelaxNGParseAdapter.h  RelaxNGValidateAdapter.h  SchematronAllocatorAdapter.h  SchematronParseAdapter.h  SchematronValidateAdapter.h  libxml2.h
include/libdataset/xml/validators/: RelaxNGValidator.h  SchematronValidator.h  Validator.h  validators.h
include/libdataset/xml/visitors/: XMLPrintVisitor.h  visitors.h
include/libexceptions/: BGSPlatformException.h  ExceptionsUtils.h  ExceptionsUtils.t  libexceptions.h  macros.h
src/: rank_aggregation_visitor.cpp
src/libdataset/: ThirdPartyLibManager.cpp
src/libdataset/xml/: XMLAttr.cpp  XMLDocument.cpp  XMLErrorMessage.cpp  XMLNode.cpp
src/libdataset/xml/adapters/libxml2/: AllocatorAdapter.cpp  RelaxNGAllocatorAdapter.cpp  RelaxNGParseAdapter.cpp  RelaxNGValidateAdapter.cpp  SchematronAllocatorAdapter.cpp  SchematronParseAdapter.cpp  SchematronValidateAdapter.cpp
src/libdataset/xml/validators/: RelaxNGValidator.cpp  SchematronValidator.cpp  Validator.cpp
src/libdataset/xml/visitors/: XMLPrintVisitor.cpp
src_mains/: example_single.cpp  example_xml.cpp  main.cpp  testing.cpp
xml/: rules_example_hierarchical.xml  rules_example_single.xml
